fixing button spacing

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ nav {
 	background-color: white;
 	text-align: center;
 	padding: 5px;
+	margin-top:30px;
 }
 ul {
 	list-style-type: none;
@@ -228,6 +229,10 @@ li {
 /* Text Styling for Body Pages Content */
 .outfit-specs h2{
 	font-size:1em;
+}
+
+.sub-body {
+	margin-bottom:20px;
 }
 
 @media (min-width: 799px){
